# pyrig-runtime-overrides

./: CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  prek.toml  pyproject.toml
.github/: configure.sh  settings.json
.github/workflows/: deploy.yml  health_check.yml
docs/: api.md  index.md
src/pyrig_runtime_overrides/: __init__.py
src/pyrig_runtime_overrides/rig/: __init__.py
src/pyrig_runtime_overrides/rig/configs/: __init__.py  pyproject.py
tests/: conftest.py
tests/test_pyrig_runtime_overrides/: test_init_project.py
tests/test_pyrig_runtime_overrides/test_rig/test_configs/: test_pyproject.py
