[project]
name = "pyrig-runtime-overrides"
version = "2.1.0"
description = "A simple package that contains overrides for pyrig-runtime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyrig>=17.6.0",
    "pyrig-pypi>=3.0.10",
]
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "pyrig",
]

[[project.authors]]
name = "Winipedia"

[[project.maintainers]]
name = "Winipedia"

[project.urls]
Homepage = "https://github.com/Winipedia/pyrig-runtime-overrides"
Documentation = "https://Winipedia.github.io/pyrig-runtime-overrides"
Source = "https://github.com/Winipedia/pyrig-runtime-overrides"
Issues = "https://github.com/Winipedia/pyrig-runtime-overrides/issues"
Changelog = "https://github.com/Winipedia/pyrig-runtime-overrides/releases"

[project.scripts]
pyrig-runtime-overrides = "pyrig_runtime.rig.cli.main:main"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.4",
    "pip-audit>=2.10.1",
    "prek>=0.4.8",
    "pyrig>=17.6.0",
    "pyrig-codecov>=3.0.10",
    "pyrig-pypi>=3.0.10",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "rumdl>=0.2.28",
    "ty>=0.0.56",
    "typos>=1.48.0",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.pytest]
testpaths = [
    "tests",
]
addopts = [
    "--cov=pyrig_runtime_overrides",
    "--cov-branch",
    "--cov-fail-under=100",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
]
filterwarnings = [
    "error",
]
strict = true

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pyrig-runtime",
]
