[project]
name = "pyrig-runtime-overrides"
version = "2.14.5"
description = "A simple package that contains overrides for pyrig-runtime."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = [
  "LICENSE",
]
authors = [
  { name = "Winipedia" },
]
maintainers = [
  { name = "Winipedia" },
]
keywords = [
  "pyrig",
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "pyrig>=18.3.4",
  "pyrig-pypi>=3.1.2",
  "pyrig-runtime",
]

[project.urls]
Changelog = "https://github.com/Winipedia/pyrig-runtime-overrides/releases"
Documentation = "https://Winipedia.github.io/pyrig-runtime-overrides"
Homepage = "https://github.com/Winipedia/pyrig-runtime-overrides"
Issues = "https://github.com/Winipedia/pyrig-runtime-overrides/issues"
Source = "https://github.com/Winipedia/pyrig-runtime-overrides"

[project.scripts]
pyrig-runtime-overrides = "pyrig_runtime.rig.cli.main:main"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "deptry>=0.25.1",
  "detect-secrets>=1.5.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocs-mermaid2-plugin>=1.2.3",
  "mkdocstrings[python]>=1.0.5",
  "pip-audit>=2.10.1",
  "pre-commit-hooks",
  "prek>=0.4.8",
  "pyrig>=18.3.4",
  "pyrig-codecov>=3.2.6",
  "pyrig-fixtures>=2.15.0",
  "pyrig-pypi>=3.1.2",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "pytest-randomly",
  "ruff>=0.15.21",
  "rumdl>=0.2.30",
  "ryl",
  "shellcheck-py",
  "shfmt-py",
  "tombi",
  "ty>=0.0.58",
  "typos>=1.48.0",
]

[build-system]
requires = [
  "uv-build",
]
build-backend = "uv_build"

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "pyrig-runtime",
]

[tool.pytest]
addopts = [
  "--cov-branch",
  "--cov-fail-under=100",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
  "--cov=pyrig_runtime_overrides",
]
filterwarnings = [
  "error",
]
strict = true
testpaths = [
  "tests",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "CPY001",
]
select = [
  "ALL",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
